--- a/appinfo.json
+++ b/appinfo.json
@@ -1,10 +1,10 @@
 {
-	"id": "com.kandutech.voogle",
-	"version": "2.1.3",
-	"vendor": "kandutech",
+	"id": "com.openmobl.app.voogle",
+	"version": "2.1.4",
+	"vendor": "OpenMobl Systems",
 	"type": "web",
 	"main": "index.html",
-	"title": "Voogle",
+	"title": "Voice",
 	"icon": "icon.png",
 	"splashicon": "images/transparent_pixel.png",
 	"splashBackground": "splash.png",
